# ipnis

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  idea.md  plan.md
.github/workflows/: build-check.yml  code-scanning-devskim.yml
api/: Cargo.toml
api/onnxruntime/: Cargo.toml
api/onnxruntime/src/: client.rs  config.rs
api/src/: lib.rs  server.rs
common/: Cargo.toml
common/src/: lib.rs  model.rs  shape.rs
common/src/nlp/: input.rs  mod.rs  output.rs  tensor.rs
common/src/tensor/: class.rs  dimension.rs  dynamic.rs  image.rs  mod.rs  shape.rs  string.rs  ty.rs
common/src/vision/: channel.rs  mod.rs  tensor.rs
core/: Cargo.toml
core/src/: lib.rs  shape.rs
core/src/tensor/: dynamic.rs  mod.rs
example/: Cargo.toml
example/src/: main.rs
modules/: README.md
modules/nlp/: README.md
modules/nlp/question-answering/: Cargo.toml
modules/nlp/question-answering/example/: Cargo.toml
modules/nlp/question-answering/example/src/: main.rs
modules/nlp/question-answering/src/: lib.rs
modules/nlp/sequence-classification/: Cargo.toml
modules/nlp/sequence-classification/example/: Cargo.toml
modules/nlp/sequence-classification/example/src/: main.rs
modules/nlp/sequence-classification/src/: lib.rs
modules/nlp/text-classification/: Cargo.toml
modules/nlp/text-classification/example/: Cargo.toml
modules/nlp/text-classification/example/src/: main.rs
modules/nlp/text-classification/src/: labels.rs  lib.rs
modules/nlp/translation/: Cargo.toml
modules/nlp/translation/example/: Cargo.toml
modules/nlp/translation/example/src/: main.rs
modules/nlp/translation/src/: lib.rs
modules/nlp/zero-shot-classification/: Cargo.toml
modules/nlp/zero-shot-classification/example/: Cargo.toml
modules/nlp/zero-shot-classification/example/src/: main.rs
modules/nlp/zero-shot-classification/src/: lib.rs
modules/vision/: README.md
modules/vision/image-classification/: Cargo.toml
modules/vision/image-classification/example/: Cargo.toml
modules/vision/image-classification/example/src/: main.rs
modules/vision/image-classification/src/: lib.rs
pallet/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: config.rs  engine.rs  lib.rs  main.rs  model.rs  shape.rs
runtime/src/tensor/: image.rs  mod.rs
