[workspace]
resolver = "2"
members = [
    "api",
    "api/onnxruntime",
    "common",
    "modules/nlp/question-answering",
    "modules/nlp/question-answering/example",
    "modules/nlp/sequence-classification",
    "modules/nlp/sequence-classification/example",
    "modules/nlp/zero-shot-classification",
    "modules/nlp/zero-shot-classification/example",
    "modules/vision/image-classification",
    "modules/vision/image-classification/example",
    "pallet",
    "runtime",
]
default-members = ["runtime"]
