[workspace]
resolver = "2"
members = [
    "api",
    "api/onnxruntime",
    "common",
    "modules/nlp/question-answering",
    "modules/nlp/question-answering/example",
    "modules/nlp/text-classification",
    "modules/nlp/text-classification/example",
    "modules/nlp/translation",
    "modules/nlp/translation/example",
    "modules/nlp/zero-shot-classification",
    "modules/nlp/zero-shot-classification/example",
    "modules/vision/image-classification",
    "modules/vision/image-classification/example",
    "pallet",
    "runtime",
]
default-members = ["runtime"]
