[package]
name = "ipnis-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["image", "onnxruntime"]
image = ["ipnis-api-onnxruntime?/image"]
onnxruntime = ["ipnis-api-onnxruntime"]

[dependencies]
ipnis-api-onnxruntime = { path = "./onnxruntime", optional = true }
