[package]
name = "ipnis-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["image", "onnxruntime"]
image = ["ipnis-api-onnxruntime?/image", "ipnis-common/image"]
onnxruntime = ["ipnis-api-onnxruntime", "ipnis-common/onnxruntime"]

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis" }
ipnis-api-onnxruntime = { path = "./onnxruntime", optional = true }
ipnis-common = { path = "../common" }
