[package]
name = "ipnis-common"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "InterPlanetary Neural Interpretation Service"
documentation = "https://docs.rs/ipnis"
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://ulagbulag.io/"
repository = "https://github.com/ulagbulag-village/ipnis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis.git", features = [
    "derive",
] }
ipiis-common = { git = "https://github.com/ulagbulag-village/ipiis" }

bytecheck = "0.6"
image = { version = "0.24", optional = true }
onnxruntime = { git = "https://github.com/ulagbulag-village/onnxruntime-rs.git", optional = true }
rkyv = { version = "0.7", features = ["archive_le"] }
rust_tokenizers = { version = "7.0", default-features = false, optional = true }
zerocopy = "0.6"
