[package]
name = "ipnis-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
avusen = { path = "../../avusen" }
image = "0.24"
ipnis-common = { path = "../common" }
onnxruntime = { git = "https://github.com/ulagbulag-village/onnxruntime-rs.git", features = [
    "serde",
] }
serde = { version = "1.0", features = ["derive"] }
