[package]
name = "ipnis-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
image = "0.24"
onnxruntime = { git = "https://github.com/ulagbulag-village/onnxruntime-rs.git" }
tokio = { version = "1.17", features = ["full"] }
ureq = "2.4"
