[package]
name = "ipnis-api-onnxruntime"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "InterPlanetary Neural Interpretation Service"
documentation = "https://docs.rs/ipnis"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
homepage = "https://ulagbulag.io/"
repository = "https://github.com/ulagbulag-village/ipnis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
image = ["ipnis-common/image"]

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis.git", features = [
    "derive",
] }
ipiis-api = { git = "https://github.com/ulagbulag-village/ipiis.git" }
ipnis-common = { path = "../../common", features = ["onnxruntime"] }
ipsis-common = { git = "https://github.com/ulagbulag-village/ipsis.git" }
ipsis-modules-local = { git = "https://github.com/ulagbulag-village/ipsis.git" }
