[package]
name = "ipnis-modules-question-answering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis.git" }
ipnis-common = { path = "../../../common" }

rust_tokenizers = "7.0"
