[package]
name = "ipnis-modules-question-answering-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
avusen = { path = "../../../../../avusen" }
ipnis-modules-question-answering = { path = ".." }
ipnis-runtime = { path = "../../../../runtime" }
tokio = { version = "1.17", features = ["full"] }
ureq = "2.4"
