[package]
name = "ipnis-modules-question-answering-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis.git" }
ipdis-api = { git = "https://github.com/ulagbulag-village/ipdis.git" }
ipdis-modules-gdown = { git = "https://github.com/ulagbulag-village/ipdis.git" }
ipnis-api = { path = "../../../../api" }
ipnis-modules-question-answering = { path = ".." }
